@@ -18,6 +18,7 @@ documents those changes that are of interest to users and administrators.
  -- Hide multipart priorities log message behind Priority debug flag.
  -- sched/backfill - Make hetjobs sensitive to bf_max_job_start.
  -- Fix slurmctld segfault due to job's partition pointer NULL dereference.
+ -- Verify job is pending add/removing accrual time.
 
 * Changes in Slurm 18.08.6-2
 ============================
